--- a/_posts/2009-01-28-pyqt-playground-image-gallery-with-zoom.html
+++ b/_posts/2009-01-28-pyqt-playground-image-gallery-with-zoom.html
@@ -6,6 +6,13 @@ tags:
 - pyqt
 - python
 - qt
+blurb: |
+        <p>In this article I'm going to create a small <a title="PyQT" href="http://www.riverbankcomputing.co.uk/software/pyqt/intro">PyQT</a> based application that displays images in a grid and that zoom the image hovered by the mouse.</p>
+
+        <p>This is how the final application looks like:
+        <img class="align-center thumbnail" title="PyQT Image Gallery Screenshot" src="/code/pyqt_image_gallery/ig_screenshot.png" alt="PyQT Image Gallery Screenshot" width="354" height="368" /></p>
+
+        <p>The first class we need is an <code class="simple">ImageGallery</code>, which is a mere <code class="simple">QDialog</code> using a <code class="simple">QGridLayout</code>.</p>
 ---
 <p>In this article I'm going to create a small <a title="PyQT" href="http://www.riverbankcomputing.co.uk/software/pyqt/intro">PyQT</a> based application that displays images in a grid and that zoom the image hovered by the mouse.</p>
 
