--- a/_posts/2011-04-30-create-a-spinning-cube-with-opengl-es-and-android.html
+++ b/_posts/2011-04-30-create-a-spinning-cube-with-opengl-es-and-android.html
@@ -4,6 +4,15 @@ title: Create a spinning cube with OpenGL ES and Android
 tags: 
 - android
 - opengl
+- java
+blurb: |
+        <p>Android supports 3D graphics via the <strong>OpenGL ES</strong> API, a flavor of OpenGL specifically designed for embedded devices.</p>
+
+        <p>This article is not an OpenGL tutorial, it assumes the reader has already basic OpenGL knowledge. The final result will look like this:
+        <img src="/img/opengl_spinning_cube.png" alt="Screenshot of OpenGL ES spinning cube" title="Screenshot of OpenGL ES spinning cube" width="300" height="223" class="align-center thumbnail" /></a></p>
+
+        <p>First we write a new <code class="simple">Activity</code> and in the <code class="simple">onCreate</code> method we create the two fundamental objects
+        we need to use the OpenGL API: a <code class="simple">GLSurfaceView</code> and a <code class="simple">Renderer</code>.</p>
 ---
 <p>Android supports 3D graphics via the <strong>OpenGL ES</strong> API, a flavor of OpenGL specifically designed for embedded devices.</p>
 
