--- a/_posts/2011-04-30-grabbing-video-using-mediarecorder.html
+++ b/_posts/2011-04-30-grabbing-video-using-mediarecorder.html
@@ -6,6 +6,11 @@ tags:
 - android
 - mediarecorder
 - video
+- java
+blurb: |
+        <p>The <code class="simple">MediaRecorder</code> is normally used to perform audio and/or video recording. The class has a straightforward API but as it's based on a simple state machine the methods must be called in the proper order in order to avoid <code class="simple">IllegalStateException</code> from popping up.</p>
+
+        <p>Create a new <code class="simple">Activity</code> and override the <code class="simple">onCreate</code> method with the following:</p>
 ---
 <p class="headsup"><strong>Update! </strong> The full source code for this demo <a href="/code/android/media_recorder_recipe_code.zip">is available.</a></p>
 
