--- a/_posts/2011-04-30-play-a-video-on-youtube-using-an-intent.html
+++ b/_posts/2011-04-30-play-a-video-on-youtube-using-an-intent.html
@@ -6,6 +6,9 @@ tags:
 - android
 - video
 - youtube
+- java
+blurb: |
+        <p class="warning"><strong>Warning! </strong> For this demo to work the user needs the Youtube application installed on his device.</p>
 ---
 <p class="warning"><strong>Warning! </strong> For this demo to work the user needs the Youtube application installed on his device.</p>
 
