--- a/_posts/2011-04-30-touch-a-file-on-android.html
+++ b/_posts/2011-04-30-touch-a-file-on-android.html
@@ -3,6 +3,27 @@ layout: post
 title: "\"touch\" a file on Android"
 tags: 
 - android
+- java
+blurb: |
+        <p>This snippet mimics the behaviour of the unix <tt>touch</tt> command on the Android platform:</p>
+        {% highlight java %}
+        public static void touch(File file) throws IOException {
+            if(!file.exists()) {
+                File parent = file.getParentFile();
+                if(parent != null) 
+                    if(!parent.exists())
+                    if(!parent.mkdirs())
+                        throw new IOException("Cannot create parent
+                            directories for file: " + file);
+                
+                file.createNewFile();
+            }
+                
+            boolean success = file.setLastModified(System.currentTimeMillis());
+            if (!success)
+                throw new IOException("Unable to set the last modification time for " + file);
+        }
+        {% endhighlight %}
 ---
 This snippet mimics the behaviour of the unix <tt>touch</tt> command on the Android platform:
 {% highlight java %}
