--- a/_posts/2011-07-14-movie-suggestions-beta-is-out.html
+++ b/_posts/2011-07-14-movie-suggestions-beta-is-out.html
@@ -2,7 +2,17 @@
 layout: post
 title: Movie Suggestions Beta
 tags: 
-- android
+- Android
+- Java
+blurb: |
+        <p>I just released my first Android application <a href="https://market.android.com/details?id=com.marcodinacci.android.movierec">on the Android market</a>. Technically it's the second but it's the first one on the market.</p>
+
+        <p><strong>Movie Suggestions</strong> is a simple application that uses a couple of web services to find a list of movies that you may like.</p>
+        <div align="center"><img src="/img/ms_beta_screenshot.png" alt="Movie Suggestions screenshot" title="Movie Suggestions screenshot" width="168" height="300" class="align-center thumbnail" /></div>  
+
+        <p>Once you select a movie you can then read some comments from reviewers and see the trailer on Youtube, where available.</p> 
+        <p>Graphics and functionalities are pretty basic at the moment but hopefully the only one thing it does it does it well. In any case, I made it to learn the Android framework and it's been a great exercise.</p>
+        <p></p>
 ---
 <p class="headsup">UPDATE: <a href="https://github.com/mdinacci/rottentomatoes-for-android" title="source code">here</a> is the source code of the RottenTomatoes API wrapper. It's not a full wrapper but it covers most of the API.</p>
 
