--- a/_posts/2012-05-30-filedialog-fix-osx.html
+++ b/_posts/2012-05-30-filedialog-fix-osx.html
@@ -5,6 +5,11 @@ tags:
 - Java
 - OSX
 - OpenJDK
+blurb: |
+      <p>The OpenJDK FileDialog on OSX does not allow to select directories even if the <strong>apple.awt.fileDialogForDirectories</strong> property is set to true.</p>
+      <p><a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=7161437" title="Bug 7161437">A bug has been reported</a> a bit more than a month ago but
+        it seem there wasn't any intention to fix it as it's been closed as a duplicate of a <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6927978">RFE</a> aimed at improving the FileDialog functionalities.
+        This is all nice and good except for the fact that the RFE is almost two years and a half old so the chances to see 7161437 fixed anytime soon are pretty slim.</p>
 ---
 
 <script>
