--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Blog
+---
+<div id="home"> 
 <script src="/js/mdpopup.js"></script>
 <h3>
 	<img class="project-icon" src="/img/icons/group_bill.png"/>
@@ -59,5 +64,4 @@ of visualizations to highlight the most used technologies required by the compan
 looking for developers. I used the graphics in an article about the <a href="http://www.intransitione.com/blog/look-it-job-market/">job market</a>. 
 </p>
 
-<p>My <a href="https://github.com/mdinacci">GitHhub</a> page.</p>
-
+</div>
