Some more changes to the java to app store post

--- a/_posts/2012-06-30-take-java-to-app-store.html
+++ b/_posts/2012-06-30-take-java-to-app-store.html
@@ -360,9 +360,9 @@ productbuild --component YourApp.app /Applications --sign SIGNING_ID_INSTALLER Y
 <p>Here's a list of most of the problems I've encountered and their solution, where available:</p>
 
 <h4>Launch failure <em>(LSOpenURLsWithRole() failed with error...)</em></h4>
-
+    <p class="success"><b>UPDATE:</b> this has been fixed.</p>
     <p><a href="http://mail.openjdk.java.net/pipermail/macosx-port-dev/2012-May/004116.html"/>Mailing list Discussion</a>. 
-    <p>This is not a bug in the AppBundler but it is related to <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=7159381">this bug</a> which should be fixed soon.</p>
+    <p>This is not a bug in the AppBundler but it is related to <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=7159381">this bug</a> <s>which should be fixed soon</s>.</p>
 
 <h4>libfreetype absolute reference causes applications inside a sandbox to crash</h4>
     <p><a href="http://mail.openjdk.java.net/pipermail/macosx-port-dev/2012-May/004187.html" title="ML discussion">Mailing list discussion</a></p>
