--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,22 @@ title: Blog
 <div id="home"> 
 <script src="/js/mdpopup.js"></script>
 <h3>
+	<img class="project-icon" src="/img/icons/java.png"/>
+	<a title="OpenJDK " href="/blog/take-java-to-app-store/">OpenJDK 7 fork</a>
+</h3>
+<p>I maintain a <a href="https://bitbucket.org/mdinacci/openjdk7u-jdk" title="Link to OpenJDK7u repo">fork of OpenJDK 7</a> that fixes some bugs on OSX and that allow 
+	<a href="http://infinitekind.com/" title="Link to The Infinite Kind LLC">us</a> to publish our Java application in the App Store.</p>
+	<p>See <a href="/blog/take-java-to-app-store/" title="Link to article">this article</a> and <a href="/blog/forking-jdk-for-fun-and-profit/">this one too</a> for more details.
+</p>
+<h3>
+	<img class="project-icon" src="/img/icons/java.png"/>
+	<a title="OpenJDK " href="/blog/take-java-to-app-store/">AppBundler fork</a>
+</h3>
+<p>I maintain a <a href="https://bitbucket.org/mdinacci/appbundler" title="Link to AppBundler repo">fork of Oracle AppBundler</a> that adds some functionalities not available in the original code to ease the deployment of Java applications on OSX.</p>
+	<p>See <a href="/blog/take-java-to-app-store/" title="Link to article">this article</a> and <a href="/blog/forking-jdk-for-fun-and-profit/">this one too</a> for more details.
+</p>
+
+<h3>
 	<img class="project-icon" src="/img/icons/group_bill.png"/>
 	<a title="Group Bill " href="/blog/group-bill-hit-the-app-store/">Group Bill</a>
 	<button data="/img/group_bill.png" datawidth="500" dataheight="248" class="popup-trigger"/>
@@ -17,10 +33,9 @@ people have eaten/drink. <a href="http://itunes.apple.com/us/app/group-bill/id50
 	<a title="iPhone app" href="#">iPhone application</a>
 	<button data="/img/twim.png" datawidth="256" dataheight="192" class="popup-trigger"/>
 </h3>
-<p>An iPhone application I've written for a client that allows the user to build a report in case of an emergency based on 
-pictures, videos, text messages and audio recordings. </p>
-<p>The report is then saved on the device and sent to remote servers
-along with the user position where it will be analyzed and dispatched to the competent authorithies.
+<p>An emergency and disaster management iPhone application I've written for a client that allows the user to build a report based on 
+pictures, videos, text messages and audio recordings, save it on his device and send it to a remote server
+where it will be analyzed and dispatched to the competent authorithies.
 </p>
 <p>Not (yet) available on the iTunes store.</p>
 
